<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"></android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/proza_icon"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/key_activation"
        android:layout_marginBottom="5dp"
        android:focusable="false"
        android:editable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:id="@+id/code_register"
        android:hint="@string/code_register"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:minWidth="261dp"
        android:layout_gravity="center"
        android:id="@+id/button_register"
        android:text="@string/register"
        android:background="@drawable/button_style_reg"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:id="@+id/button_unregister"
        android:minWidth="250dp"
        android:text="@string/unregister_version"
        android:background="@drawable/button_style_reg"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="5dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/exit_program"
        android:layout_gravity="center"
        android:minWidth="261dp"
        android:text="@string/exit"
        android:background="@drawable/button_style_reg"
        android:textColor="@color/white"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="5dp"/>




</LinearLayout>