<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InventoryEditActivity">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="#0d0ac6"
            android:text="№: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:focusable="false" />

        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/text_edit_number_inventory"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:hint="                       "
            android:gravity="center"
            android:inputType="number"
            style="@style/editStyle2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingLeft="10dp">

        <TextView
            android:textColor="#0d0ac6"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:textSize="18dp"
            android:text="@string/date"
            android:id="@+id/button_edit_date"
            android:hint="       Дата       "
            android:background="@drawable/button_rect"
            android:focusable="false"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <TextView
            android:text="@string/subdivision"
            android:id="@+id/text_type_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0d0ac6"
            android:paddingLeft="20dp"
            android:layout_margin="10dp"
            android:hint=""
            android:focusable="false"/>

        <Button
            android:text="@string/choice"
            android:hint="@string/choice"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/button_choice_stores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rect"
            android:focusable="false"/>

    </LinearLayout>

</LinearLayout>