<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:id="@+id/text_invoice"
        android:textSize="22dp"/>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#0d0ac6"
            android:text="№: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingRight="13dp"

            />

        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/text_edit_number"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:hint=""
            style="@style/editStyleWithoutMargin"
            android:gravity="center"
            android:minWidth="105dp"
            />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/number_layout">

        <TextView
            android:textColor="#0d0ac6"
            android:text="№: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingRight="12dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/text_edit_number_provider"
            android:layout_height="49dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            style="@style/editStyleWithoutMargin"
            android:gravity="center"
            android:minWidth="105dp"
            />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#0d0ac6"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:id="@+id/textView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/date"
            android:id="@+id/button_edit_date"
            android:hint="Дата"
            android:minWidth="105dp"
            android:background="@drawable/button_rect_without_padding"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/date_layout">

            <TextView
                android:textColor="#0d0ac6"
                android:layout_marginTop="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/date"
                android:id="@+id/button_edit__date_provider"
                android:hint="Дата"
                android:minWidth="105dp"
                android:background="@drawable/button_rect_without_padding"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:text="@string/provider"
            android:id="@+id/text_type_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#0d0ac6"
            android:paddingLeft="20dp"
            android:layout_margin="10dp"
            android:hint=""/>

        <Button
            android:text="@string/choice"
            android:hint="@string/choice"
            android:textSize="18dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/button_choice_stores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rect" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_rect"
        android:id="@+id/partition"
        android:text="Розбиття"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/layout_sum">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum"
            android:minWidth="110dp"
            android:textColor="@color/red"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/summ"
            android:gravity="right"
            android:minWidth="100dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sum_complete"
            android:textColor="@color/green"
            android:gravity="right"
            android:minWidth="100dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_count">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:minWidth="110dp"
            android:textColor="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/count_position"
            android:minWidth="100dp"
            android:gravity="right"
            />
        <TextView
            android:layout_width="wrap_content"
            android:minWidth="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/count_complete"
            android:textColor="@color/green"
            android:gravity="right"
            />
    </LinearLayout>


</LinearLayout>